@@ -71,6 +71,7 @@ check_PROGRAMS=\
  test-set-l \
  test-subtract \
  test-bytes-shift-left \
+ test-bytes-shift-right \
  test-to-string
 
 COMMON_TEST_SOURCES=src/ehbigint.h \
@@ -141,6 +142,10 @@ test_bytes_shift_left_SOURCES=tests/test-bytes-shift-left.c \
  $(COMMON_TEST_SOURCES)
 test_bytes_shift_left_LDADD=$(TEST_LDADDS)
 
+test_bytes_shift_right_SOURCES=tests/test-bytes-shift-right.c \
+ $(COMMON_TEST_SOURCES)
+test_bytes_shift_right_LDADD=$(TEST_LDADDS)
+
 test_to_string_SOURCES=tests/test-to-string.c $(COMMON_TEST_SOURCES)
 test_to_string_LDADD=$(TEST_LDADDS)
 
@@ -205,4 +210,5 @@ valgrind: $(check_PROGRAMS)
 	libtool --mode=execute valgrind -q ./test-set-l
 	libtool --mode=execute valgrind -q ./test-subtract
 	libtool --mode=execute valgrind -q ./test-bytes-shift-left
+	libtool --mode=execute valgrind -q ./test-bytes-shift-right
 	libtool --mode=execute valgrind -q ./test-to-string
