@@ -15,3 +15,5 @@
 * add sqrt() function (Newton's method?)
 
 * make stack allocation plugable for embedded non-alloca environments
+
+* optimize shifting with memmove
