@@ -86,7 +86,7 @@
  
  #include <stddef.h>		/* size_t */
  
-@@ -197,8 +199,10 @@ enum {
+@@ -203,8 +205,10 @@ enum {
  	EHBI_LAST
  };
  
