@@ -99,6 +99,12 @@ int ehbi_mul(struct ehbigint *res, const struct ehbigint *bi1,
 int ehbi_bytes_shift_left(struct ehbigint *bi, size_t num_bytes);
 
 /*
+   shifts the value of the ehbigint down by num_bytes number of bytes
+   returns 0 on success or error_code on error
+*/
+int ehbi_bytes_shift_right(struct ehbigint *bi, size_t num_bytes);
+
+/*
    populates the first ehbigint quotient and remainder with the results
    of the numerator divided by the denominator
    returns 0 on success or error_code on error
